# webapp-hub

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
scripts/: check-build.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  models.rs  proxy.rs  shortcuts.rs  window.rs
src/components/: AppCard.tsx  AppList.tsx  AppManager.tsx  Settings.tsx  WebAppView.tsx
src/components/layout/: AppSidebar.tsx  Sidebar.tsx
src/components/ui/: Button.tsx  Dialog.tsx  Input.tsx  Toaster.tsx
src/hooks/: useTauri.ts
src/lib/: utils.ts
src/stores/: appStore.ts
src/types/: index.ts
